mongorestore oplogReplay + oplogLimit should not be compatible with any other collections

XMLWordPrintableJSON

    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If you are replaying the oplog.bson file with --oplogLimit no other databases/collections should be restored, and an error should tell you that you should remove the collections before restoring with those options. This feature was meant to just apply to oplog replay exclusively.

      In addition the timestamp (from --oplogLimit <ts>) will be validated to be greater than the top (latest) oplog entry.

            Assignee:
            Scott Hernandez (Inactive)
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: