SERVER-8685: mongorestore oplogLimit fixes